Adding a pull policy to the cronjob

--- a/cronjob.yaml
+++ b/cronjob.yaml
@@ -11,4 +11,5 @@ spec:
           containers:
           - name: resolver
             image: readytalk/dns-geo-analyzer
+            imagePullPolicy: Always
           restartPolicy: OnFailure
