Adding env to cronjob

--- a/cronjob.yaml
+++ b/cronjob.yaml
@@ -10,6 +10,11 @@ spec:
         spec:
           containers:
           - name: resolver
-            image: readytalk/dns-geo-analyzer
+            image: readytalk/dns-geo-analyzer:latest
             imagePullPolicy: Always
+            env:
+            - name: NAMERSERVERS
+              value: "google,8.8.8.8 cloudflare,1.1.1.1"
+            - name: SITES
+              value: "google,google.com"
           restartPolicy: OnFailure
